[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = "0.27"
anyhow = "1.0"
